# routes/swagger.js
@@ -1,6 +1,8 @@
 const router = require('express').Router();
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('../swagger.json');
+const { requiresAuth } = require('express-openid-connect');
+
 
 // router.use('/api-docs', swaggerUi.serve);
 // router.get('/api-docs', swaggerUi.setup(swaggerDocument));
@@ -9,7 +11,7 @@ router
     res.removeHeader('Content-Type');
     next();
   })
-  .use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
+  .use('/api-docs', requiresAuth(), swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
 
 module.exports = router;
